Bug 224848 - Dolphin randomly crashes [QString::operator=, KLoadMetaDataThread::run] (4.4RC2+)
Summary: Dolphin randomly crashes [QString::operator=, KLoadMetaDataThread::run] (4.4...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 216086 222364 224283 224941 226512 226834 227027 227149 227877 227880 227981 227996 228463 228513 228695 229072 229257 229270 229446 229600 230064 230591 230701 230846 230890 231289 231310 231953 232122 232155 232212 232216 232243 232590 232591 232745 233218 233267 233622 233663 233975 234183 235169 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-30 09:03 UTC by David
Modified: 2010-04-23 15:09 UTC (History)
22 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (7.79 KB, text/plain)
2010-02-10 16:40 UTC, David
Details
New crash information added by DrKonqi (11.92 KB, text/plain)
2010-02-13 01:27 UTC, m.wege
Details
New crash information added by DrKonqi (6.54 KB, text/plain)
2010-02-19 20:51 UTC, Johannes Schwall
Details
New crash information added by DrKonqi (10.08 KB, text/plain)
2010-02-24 12:13 UTC, kevin C
Details
New crash information added by DrKonqi (3.69 KB, text/plain)
2010-02-28 13:53 UTC, Raúl A V
Details
New crash information added by DrKonqi (12.27 KB, text/plain)
2010-03-27 02:09 UTC, Fabian B.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2010-01-30 09:03:33 UTC
Application: dolphin (1.4)
KDE Platform Version: 4.3.95 (KDE 4.3.95 (KDE 4.4 RC2))
Qt Version: 4.6.0
Operating System: Linux 2.6.31-17-generic x86_64
Distribution: Ubuntu 9.10

-- Information about the crash:
I had a Dolphin window open with many tabs, and was clicking on one of the buttons to scroll a tab that was outside of the bar onto it so I could use that tab.  And then it crashed.  (And took with it all my other open Dolphin windows)

 -- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
The current source language is "auto; currently c".
[Current thread is 1 (Thread 0x7f4beef8a7f0 (LWP 20530))]

Thread 3 (Thread 0x7f4bddccf910 (LWP 21831)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:220
#1  0x00007f4bdc1f2da1 in metronom_sync_loop (this=0x28238a0) at metronom.c:870
#2  0x00007f4be81b2a04 in start_thread (arg=<value optimized out>) at pthread_create.c:300
#3  0x00007f4beac4080d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f4bc3082910 (LWP 21844)):
[KCrash Handler]
#5  QBasicAtomicInt::deref (this=0x4e6cd98, other=...) at ../../include/QtCore/../../src/corelib/arch/qatomic_x86_64.h:133
#6  QString::operator= (this=0x4e6cd98, other=...) at tools/qstring.cpp:1281
#7  0x0000000000464e03 in KLoadMetaDataThread::run (this=0x4e6cd80) at ../../../../apps/dolphin/src/panels/information/kloadmetadatathread.cpp:89
#8  0x00007f4beb2596c5 in QThreadPrivate::start (arg=0x4e6cd80) at thread/qthread_unix.cpp:244
#9  0x00007f4be81b2a04 in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007f4beac4080d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()
The current source language is "auto; currently asm".

Thread 1 (Thread 0x7f4beef8a7f0 (LWP 20530)):
#0  0x00007f4beac343c3 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f4be5b0b29a in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f4be5b0cc2c in xcb_wait_for_reply () from /usr/lib/libxcb.so.1
#3  0x00007f4be5b0d708 in xcb_generate_id () from /usr/lib/libxcb.so.1
#4  0x00007f4be9b6faf8 in _XIDHandler () from /usr/lib/libX11.so.6
#5  0x00007f4be9b68b6c in ?? () from /usr/lib/libX11.so.6
#6  0x00007f4be9b447ba in XCreateGC () from /usr/lib/libX11.so.6
#7  0x00007f4bec144579 in QX11PaintEngine::begin (this=0x16c25e0, pdev=0x11b9908) at painting/qpaintengine_x11.cpp:501
#8  0x00007f4bec09435e in QPainter::begin (this=0x7fff2b722f90, pd=0x11b9908) at painting/qpainter.cpp:1772
#9  0x00007f4bec094a68 in QPainter (this=0x7fff2b722f90, pd=0xfea720) at painting/qpainter.cpp:1396
#10 0x00007f4be3387b67 in OxygenStyle::eventFilter (this=0xfdef50, obj=0xfea710, ev=0x7fff2b723700) at ../../../kstyles/oxygen/oxygen.cpp:5896
#11 0x00007f4beb34c467 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0xfea710, event=0x7fff2b723700) at kernel/qcoreapplication.cpp:819
#12 0x00007f4bebf3fe5c in QApplicationPrivate::notify_helper (this=0xe213a0, receiver=0xfea710, e=0x7fff2b723700) at kernel/qapplication.cpp:4238
#13 0x00007f4bebf4648d in QApplication::notify (this=0x7fff2b724870, receiver=0xfea710, e=0x7fff2b723700) at kernel/qapplication.cpp:4125
#14 0x00007f4becc411e6 in KApplication::notify (this=0x7fff2b724870, receiver=0xfea710, event=0x7fff2b723700) at ../../kdeui/kernel/kapplication.cpp:302
#15 0x00007f4beb34d04c in QCoreApplication::notifyInternal (this=0x7fff2b724870, receiver=0xfea710, event=0x7fff2b723700) at kernel/qcoreapplication.cpp:704
#16 0x00007f4bebf9d72d in QCoreApplication::sendSpontaneousEvent (this=0xee9360, pdev=<value optimized out>, rgn=..., offset=<value optimized out>, flags=<value optimized out>, sharedPainter=0x0, 
    backingStore=0x11b98a0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#17 QWidgetPrivate::drawWidget (this=0xee9360, pdev=<value optimized out>, rgn=..., offset=<value optimized out>, flags=<value optimized out>, sharedPainter=0x0, backingStore=0x11b98a0)
    at kernel/qwidget.cpp:5322
#18 0x00007f4bec153ed5 in QWidgetBackingStore::sync (this=0x11b98a0) at painting/qbackingstore.cpp:1289
#19 0x00007f4bebf8eb60 in QWidgetPrivate::syncBackingStore (this=0xee9360) at kernel/qwidget.cpp:1662
#20 0x00007f4bebf95885 in QWidget::event (this=0xfea710, event=0x5e88110) at kernel/qwidget.cpp:8266
#21 0x00007f4bec353c9b in QMainWindow::event (this=0xfea710, event=0x5e88110) at widgets/qmainwindow.cpp:1434
#22 0x00007f4becd58093 in KXmlGuiWindow::event (this=0x7fff2b722820, ev=0x1) at ../../kdeui/xmlgui/kxmlguiwindow.cpp:131
#23 0x00007f4bebf3fe8c in QApplicationPrivate::notify_helper (this=0xe213a0, receiver=0xfea710, e=0x5e88110) at kernel/qapplication.cpp:4242
#24 0x00007f4bebf4648d in QApplication::notify (this=0x7fff2b724870, receiver=0xfea710, e=0x5e88110) at kernel/qapplication.cpp:4125
#25 0x00007f4becc411e6 in KApplication::notify (this=0x7fff2b724870, receiver=0xfea710, event=0x5e88110) at ../../kdeui/kernel/kapplication.cpp:302
#26 0x00007f4beb34d04c in QCoreApplication::notifyInternal (this=0x7fff2b724870, receiver=0xfea710, event=0x5e88110) at kernel/qcoreapplication.cpp:704
#27 0x00007f4beb34f7c7 in QCoreApplication::sendEvent (receiver=0x0, event_type=<value optimized out>, data=0xdf7d90) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#28 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=<value optimized out>, data=0xdf7d90) at kernel/qcoreapplication.cpp:1345
#29 0x00007f4beb376ae3 in QCoreApplication::sendPostedEvents (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#30 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:276
#31 0x00007f4be72a1bce in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#32 0x00007f4be72a5598 in ?? () from /lib/libglib-2.0.so.0
#33 0x00007f4be72a56c0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#34 0x00007f4beb376623 in QEventDispatcherGlib::processEvents (this=0xdf77f0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:407
#35 0x00007f4bebfee2fe in QGuiEventDispatcherGlib::processEvents (this=0x7fff2b722820, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#36 0x00007f4beb34b972 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#37 0x00007f4beb34bd4c in QEventLoop::exec (this=0x7fff2b7247c0, flags=) at kernel/qeventloop.cpp:201
#38 0x00007f4beb34fa8b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#39 0x000000000043a705 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../../../apps/dolphin/src/main.cpp:101
The current source language is "auto; currently c".

This bug may be a duplicate of or related to bug 224283.

Possible duplicates by query: bug 224283, bug 222364.

Reported using DrKonqi
Comment 1 Frank Reininghaus 2010-01-30 15:05:57 UTC
Thanks for the bug report! Looks like bug 222364, bug 224283.

@Peter: Shouldn't this be fixed in RC 2?
Comment 2 Peter Penz 2010-01-30 15:45:42 UTC
@Frank: Yes, this should (...) have been fixed, but obviously the patch was not sufficient... I did not face such an issue yet and I'm wondering about the descriptions how to reproduce the issue: Judging from the backtrace it looks for me that it might be related that meta data is loaded asynchronously (e. g. by hovering files during changing a view or something like this), but the corresponding file is invalid already (e. g. because of a copy operation?). I'll need some time to be able to reproduce this issue...
Comment 3 Dario Andres 2010-01-30 22:34:51 UTC
*** Bug 224283 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2010-01-31 01:17:24 UTC
From bug 224941:
-- Information about the crash:
I moved two folders within the same drive via drag and drop. After droping ->
crash
Comment 5 Dario Andres 2010-01-31 01:17:26 UTC
*** Bug 224941 has been marked as a duplicate of this bug. ***
Comment 6 David 2010-02-10 16:40:37 UTC
Created attachment 40643 [details]
New crash information added by DrKonqi

This has been happening to me when closing an app I launched from Dolphin (such as right clicking a file and choosing a program to open it with) or even simply activating the window.  No drag and drop involved, although I may have done cut-and-paste file operations ealier in the session and files in directories open in tabs are being moved around/created/etc by my bittorrent client.
(also, I installed more dbg packages for libraries mentioned in the backtrace atached)
Comment 7 Dario Andres 2010-02-12 13:49:10 UTC
From bug 226512:
-- Information about the crash:
  - Browsed to a folder with dolphin
  - Folder got changed by another program
  - Pressed F5 to update
  - Dolphin crashed
Comment 8 Dario Andres 2010-02-12 13:49:13 UTC
*** Bug 226512 has been marked as a duplicate of this bug. ***
Comment 9 m.wege 2010-02-13 01:27:32 UTC
Created attachment 40727 [details]
New crash information added by DrKonqi

do not exactly know what i did 
do not exactly know what i did
Comment 10 Dario Andres 2010-02-15 16:05:55 UTC
From bug 226662:
-- Information about the crash:
dolphin crashes very often when i'm entering a video folder containing a lot of
flv videos.
Comment 11 Dario Andres 2010-02-15 18:34:52 UTC
From bug 226834:
-- Information about the crash:
I only opened a (relatively large) PPT file (with OpenOffice), which contained
quite a lot of images. (file size about 31 MB); dolphin just crashed.
Comment 12 Dario Andres 2010-02-15 18:34:54 UTC
*** Bug 226834 has been marked as a duplicate of this bug. ***
Comment 13 Dario Andres 2010-02-15 18:34:59 UTC
*** Bug 227027 has been marked as a duplicate of this bug. ***
Comment 14 Frank Reininghaus 2010-02-16 11:15:27 UTC
*** Bug 227149 has been marked as a duplicate of this bug. ***
Comment 15 Johannes Schwall 2010-02-19 20:51:44 UTC
Created attachment 40940 [details]
New crash information added by DrKonqi

I guess the attached is more or less the same that has happened to me over the last few days ... it seems like random crashes of dolphin when doing "normal" stuff like opening a file or switching to another tab (which was what I was doing this time, if I remember correctly).
Comment 16 Frank Reininghaus 2010-02-21 11:12:31 UTC
From bug 227880:
-- Information about the crash:
[...]
What was happening when dolphin crashed:
I tried to move "information panel" over the "places panel".
[...]
The crash can be reproduced some of the time.
Comment 17 Frank Reininghaus 2010-02-21 11:12:48 UTC
*** Bug 227880 has been marked as a duplicate of this bug. ***
Comment 18 Frank Reininghaus 2010-02-21 11:14:31 UTC
From bug 227877:
-- Information about the crash:
select multiple files, press F2. The rename dialogue pops up and dolphin
crashes a few seconds later. this bug could not be reproduced
Comment 19 Frank Reininghaus 2010-02-21 11:14:43 UTC
*** Bug 227877 has been marked as a duplicate of this bug. ***
Comment 20 Dario Andres 2010-02-21 23:39:30 UTC
From bug 227981: 
-- Information about the crash:
What was I doing when crash happened:

I was editing main toolbar in dolphin;
It already contained few new actions I have set up previously (Dolphin
settings, separator, delete, rename,  and properties);
I wanted to add new action named "Delete (Using shortcut for trash)";
I selected it and added it between previously set "delete" and "rename";
Since it had no icon I selected an icon for it.

After clicking OK Dolphin crashed.
Comment 21 Dario Andres 2010-02-21 23:39:34 UTC
*** Bug 227981 has been marked as a duplicate of this bug. ***
Comment 22 Dario Andres 2010-02-21 23:41:52 UTC
*** Bug 222364 has been marked as a duplicate of this bug. ***
Comment 23 Dario Andres 2010-02-22 03:18:13 UTC
*** Bug 227996 has been marked as a duplicate of this bug. ***
Comment 24 kevin C 2010-02-24 12:13:44 UTC
Created attachment 41052 [details]
New crash information added by DrKonqi

I want to add a new element in the main toolbar, and it crashed.

When I relaunch Dolphin, the button was set in the toolbar.
Comment 25 Dario Andres 2010-02-27 14:38:53 UTC
From bug 228695 / Case 1:
I was opening a picture using dolphin (starting gwenview), after I closed
gwenview I clicked on the background to take the focus away from the selected
picture, after that dolphin crashed
The crash does not seem to be reproducible.

From bug 228695 / Case 2:
Using dolphin in split mode, clicked the background to deselect a couple of
files and dolphin crashed.
I'm using the xorg-edgers repository for Kubuntu 9.10 - thought this might be
relevant since xcb is involved.
Comment 26 Dario Andres 2010-02-27 14:39:00 UTC
*** Bug 228695 has been marked as a duplicate of this bug. ***
Comment 27 Raúl A V 2010-02-28 13:53:55 UTC
Created attachment 41203 [details]
New crash information added by DrKonqi

error in dolphin when i click in direcction bar
Comment 28 Peter Penz 2010-02-28 23:03:18 UTC
SVN commit 1097312 by ppenz:

Backport of SVN commit 1097289: Only access the data of the thread that has been created most recently. Data of older threads will just get ignored.

The fix will be part of KDE SC 4.4.2 (4.4.1 has been tagged already).

BUG: 224848
BUG: 226706
BUG: 222324

 M  +10 -3     kloadmetadatathread.cpp  
 M  +9 -1      kloadmetadatathread_p.h  
 M  +43 -28    kmetadatawidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1097312
Comment 29 Peter Penz 2010-02-28 23:04:12 UTC
Thanks Dario for your great support for this issue!
Comment 30 Frank Reininghaus 2010-03-03 18:02:20 UTC
*** Bug 229257 has been marked as a duplicate of this bug. ***
Comment 31 Dario Andres 2010-03-04 13:15:23 UTC
*** Bug 229072 has been marked as a duplicate of this bug. ***
Comment 32 Dario Andres 2010-03-04 13:15:34 UTC
*** Bug 229270 has been marked as a duplicate of this bug. ***
Comment 33 Dario Andres 2010-03-04 22:43:54 UTC
*** Bug 229446 has been marked as a duplicate of this bug. ***
Comment 34 Frank Reininghaus 2010-03-05 19:47:41 UTC
*** Bug 229600 has been marked as a duplicate of this bug. ***
Comment 35 Frank Reininghaus 2010-03-05 19:48:40 UTC
*** Bug 228513 has been marked as a duplicate of this bug. ***
Comment 36 Frank Reininghaus 2010-03-05 19:50:16 UTC
*** Bug 228463 has been marked as a duplicate of this bug. ***
Comment 37 Frank Reininghaus 2010-03-09 12:59:57 UTC
*** Bug 230064 has been marked as a duplicate of this bug. ***
Comment 38 Frank Reininghaus 2010-03-13 17:12:29 UTC
*** Bug 230591 has been marked as a duplicate of this bug. ***
Comment 39 Frank Reininghaus 2010-03-14 14:05:27 UTC
*** Bug 230701 has been marked as a duplicate of this bug. ***
Comment 40 Frank Reininghaus 2010-03-14 14:34:42 UTC
*** Bug 216086 has been marked as a duplicate of this bug. ***
Comment 41 Frank Reininghaus 2010-03-14 22:51:40 UTC
*** Bug 230753 has been marked as a duplicate of this bug. ***
Comment 42 Rosetzky Cedric 2010-03-14 23:05:49 UTC
I updated from trunk yesterday and had the crash from the last duplicate: 230753. This crash still happens very randomly and very often...
Are you sure it's a duplicate? It's supposed to be resolved for a while as I can see here......
Comment 43 Frank Reininghaus 2010-03-14 23:19:23 UTC
(In reply to comment #42)
> I updated from trunk yesterday and had the crash from the last duplicate:
> 230753. This crash still happens very randomly and very often...
> Are you sure it's a duplicate? It's supposed to be resolved for a while as I
> can see here......

I think I marked the last duplicate incorrectly - it seems to be a different issue. Sorry for the noise!

I'll remove the reporters of duplicates from the CC list to prevent them from getting even more mail. Feel free to re-CC yourself to this report if you want, but there's no new interesting information to be expected - the bug will be fixed in KDE SC 4.4.2 when it's out :-)
Comment 44 Frank Reininghaus 2010-03-15 19:25:37 UTC
*** Bug 230846 has been marked as a duplicate of this bug. ***
Comment 45 Dario Andres 2010-03-16 12:31:03 UTC
*** Bug 230890 has been marked as a duplicate of this bug. ***
Comment 46 Dario Andres 2010-03-19 12:54:38 UTC
*** Bug 231289 has been marked as a duplicate of this bug. ***
Comment 47 Frank Reininghaus 2010-03-19 15:22:06 UTC
*** Bug 231310 has been marked as a duplicate of this bug. ***
Comment 48 Frank Reininghaus 2010-03-24 00:39:35 UTC
*** Bug 231953 has been marked as a duplicate of this bug. ***
Comment 49 Frank Reininghaus 2010-03-25 19:40:50 UTC
*** Bug 232122 has been marked as a duplicate of this bug. ***
Comment 50 Dario Andres 2010-03-25 22:07:50 UTC
*** Bug 232155 has been marked as a duplicate of this bug. ***
Comment 51 Dario Andres 2010-03-26 13:05:47 UTC
*** Bug 232212 has been marked as a duplicate of this bug. ***
Comment 52 Dario Andres 2010-03-26 13:56:45 UTC
*** Bug 232216 has been marked as a duplicate of this bug. ***
Comment 53 Dario Andres 2010-03-26 20:18:05 UTC
*** Bug 232243 has been marked as a duplicate of this bug. ***
Comment 54 Fabian B. 2010-03-27 02:09:39 UTC
Created attachment 42286 [details]
New crash information added by DrKonqi

Sometimes when i use dolphin and klick on text-files in $HOME/.* directories dolphin crashes. this time i have enter /home/fabi/.rattlekekz und delete all files here. now i have restart rattlekekz so that it create a new error.log in this dir. next i clicked on the error.log, kate opens, dolphin crash
Comment 55 Dario Andres 2010-03-29 18:01:21 UTC
*** Bug 232591 has been marked as a duplicate of this bug. ***
Comment 56 Dario Andres 2010-03-29 18:01:36 UTC
*** Bug 232590 has been marked as a duplicate of this bug. ***
Comment 57 Dario Andres 2010-03-31 14:48:22 UTC
*** Bug 232745 has been marked as a duplicate of this bug. ***
Comment 58 Dario Andres 2010-04-04 17:26:09 UTC
*** Bug 233218 has been marked as a duplicate of this bug. ***
Comment 59 Dario Andres 2010-04-05 01:46:01 UTC
*** Bug 233267 has been marked as a duplicate of this bug. ***
Comment 60 Dario Andres 2010-04-08 15:00:29 UTC
*** Bug 233663 has been marked as a duplicate of this bug. ***
Comment 61 Dario Andres 2010-04-08 15:03:11 UTC
*** Bug 233622 has been marked as a duplicate of this bug. ***
Comment 62 Dario Andres 2010-04-10 22:04:02 UTC
*** Bug 233975 has been marked as a duplicate of this bug. ***
Comment 63 Frank Reininghaus 2010-04-13 11:30:29 UTC
*** Bug 234183 has been marked as a duplicate of this bug. ***
Comment 64 Frank Reininghaus 2010-04-23 15:09:37 UTC
*** Bug 235169 has been marked as a duplicate of this bug. ***