Backport of SVN commit 1097289: Only access the data of the thread that has been created most recently. Data of older threads will just get ignored.

The fix will be part of KDE SC 4.4.2 (4.4.1 has been tagged already).

BUG: 224848
BUG: 226706
BUG: 222324

svn path=/branches/KDE/4.4/kdebase/apps/; revision=1097312